Completed log out button stretch challenge

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -26,6 +26,7 @@
         </div>
         <h2>Online Users</h2>
         <div class="users-online"></div>
+        <button id="logout-btn">Log Out</button>
       </div>
       <div class="chat-container">
         <div class="chat-container-fluid">
