--- a/public/index.css
+++ b/public/index.css
@@ -172,3 +172,20 @@ label {
   flex-direction: row;
   width: 100%;
 }
+
+#logout-btn {
+  width: 100%;
+  height: 40px;
+  font-size: 16px;
+  font-weight: bold;
+  background-color: #ff6347;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-top: 10px;
+}
+
+#logout-btn:hover {
+  background-color: #ff4c36;
+}
