--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,3 +1,7 @@
+<form class="username-form">
+      <input id="username-input" placeholder="Username"></input>
+      <button id="create-user-btn">Join Chat</button>
+</form>
 <div class="main-container">
   <div class="channels-and-users-online-container">
     <h1 class="brand">Make Chat</h1>
