--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Make Chat</title>
+    <title>Alexa's Socket.io App</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="socket.io/socket.io.js"></script>
     <script src="/public/index.js"></script>
@@ -10,6 +10,6 @@
     <link href='/public/index.css' rel='stylesheet' type='text/css'></link>
   </head>
   <body>
-        {{{body}}}
+    {{{body}}}
   </body>
 </html>
